@@ -140,6 +140,8 @@ Trunk (unreleased changes)
     HDFS-1083. Update TestHDFSCLI not to expect exception class name
     in error messages. (suresh)
 
+    HDFS-1099. Add test for umask backward compatibility. (suresh)
+
   OPTIMIZATIONS
 
     HDFS-946. NameNode should not return full path name when lisitng a
